Change put-float to put-float!